; ModuleID = '/home/carl/AnghaBench/esp-idf/components/esp32/test/extr_test_ahb_arb.c_tskOne.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/esp32/test/extr_test_ahb_arb.c_tskOne.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ctr = common dso_local global i32 0, align 4
@lock = common dso_local global i64 0, align 8
@state = common dso_local global i32 0, align 4
@portTICK_PERIOD_MS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [51 x i8] c"Lock malfunction detected! Ctr=0x%x instead of %x\0A\00", align 1
@.str.1 = private unnamed_addr constant [15 x i8] c"Run %d err %d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @tskOne to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tskOne(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  store i32 0, i32* %4, align 4
  store i32 0, i32* %5, align 4
  br label %6

6:                                                ; preds = %1, %26
  store i32 0, i32* @ctr, align 4
  store i64 0, i64* @lock, align 8
  store i32 1, i32* @state, align 4
  store i32 0, i32* %3, align 4
  br label %7

7:                                                ; preds = %12, %6
  %8 = load i32, i32* %3, align 4
  %9 = icmp slt i32 %8, 16384
  br i1 %9, label %10, label %15

10:                                               ; preds = %7
  %11 = call i32 @test_s32c1i_lock(i64* @lock, i32 1, i32 0, i32* @ctr)
  br label %12

12:                                               ; preds = %10
  %13 = load i32, i32* %3, align 4
  %14 = add nsw i32 %13, 1
  store i32 %14, i32* %3, align 4
  br label %7

15:                                               ; preds = %7
  %16 = load i32, i32* @portTICK_PERIOD_MS, align 4
  %17 = sdiv i32 60, %16
  %18 = call i32 @vTaskDelay(i32 %17)
  store i32 2, i32* @state, align 4
  %19 = load i32, i32* @ctr, align 4
  %20 = icmp ne i32 %19, 32768
  br i1 %20, label %21, label %26

21:                                               ; preds = %15
  %22 = load i32, i32* @ctr, align 4
  %23 = call i32 @printf(i8* getelementptr inbounds ([51 x i8], [51 x i8]* @.str, i64 0, i64 0), i32 %22, i32 32768)
  %24 = load i32, i32* %4, align 4
  %25 = add nsw i32 %24, 1
  store i32 %25, i32* %4, align 4
  br label %26

26:                                               ; preds = %21, %15
  %27 = load i32, i32* %5, align 4
  %28 = add nsw i32 %27, 1
  store i32 %28, i32* %5, align 4
  %29 = load i32, i32* %5, align 4
  %30 = load i32, i32* %4, align 4
  %31 = call i32 @printf(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0), i32 %29, i32 %30)
  %32 = load i32, i32* @portTICK_PERIOD_MS, align 4
  %33 = sdiv i32 20, %32
  %34 = call i32 @vTaskDelay(i32 %33)
  br label %6
}

declare dso_local i32 @test_s32c1i_lock(i64*, i32, i32, i32*) #1

declare dso_local i32 @vTaskDelay(i32) #1

declare dso_local i32 @printf(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
